--- a/app/views/main.html
+++ b/app/views/main.html
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-        <title>#{get 'title' /}</title>
+        <title>Play Application Server - #{get 'title' /}</title>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <link rel="stylesheet" type="text/css" media="screen" href="@{'/public/stylesheets/main.css'}">
         #{get 'moreStyles' /}
@@ -11,6 +11,7 @@
         #{get 'moreScripts' /}
     </head>
     <body>
+    	<img src="@{'/public/images/logo.png'}"/>
         #{doLayout /}
     </body>
 </html>
