--- a/app/views/main.html
+++ b/app/views/main.html
@@ -11,7 +11,9 @@
         #{get 'moreScripts' /}
     </head>
     <body>
-    	<img src="@{'/public/images/logo.png'}"/>
+    	<a href="/">
+    		<img src="@{'/public/images/logo.png'}"/>
+    	</a>
         #{doLayout /}
     </body>
 </html>
