#9 Basic support for showing logs, still WIP
Signed-off-by: Matthias van der Vlies <mvdvlies@gmail.com>

--- a/app/views/ManagerController/index.html
+++ b/app/views/ManagerController/index.html
@@ -86,3 +86,19 @@
 	</tbody>
 </table>
 #{/form}
+
+<h5>Application server log (You'll need to have a WebSockets enabled browser):</h5>
+<div id="log" rows="50" cols="100">
+</div>
+
+<script type="text/javascript">
+    // Create a socket
+    var Socket = "MozWebSocket" in window ? MozWebSocket : WebSocket;
+    var socket = new Socket('@@{LogController.manager()}');
+    
+    // Message received on the socket
+    socket.onmessage = function(event) {
+        $('#log').append(event.data);
+        $('#log').scrollTo('max', { axis:'y' } );
+    }
+</script>
