--- a/app/views/ApplicationController/show.html
+++ b/app/views/ApplicationController/show.html
@@ -1,19 +1,6 @@
 #{extends 'main.html' /}
 #{set title:'Application configuration' /}
-<h5>Application ${application.pid}:</h5>
-<ul>
-	<li>
-		#{if application.running == false}
-		   	<a href="@{ApplicationController.start(application.id)}">start</a>
-		#{/if}
-		#{else}
-			<a href="@{ApplicationController.stop(application.id)}" style="color: red">stop</a> 
-		#{/else}
-	</li>
-	<li>
-		<a href="@{ApplicationController.update(application.id)}">update</a>
-	</li>
-</ul>
+<h3>Application ${application.pid}</h3>
 
 <h5>Application log (You'll need to have a WebSockets enabled browser):</h5>
 <div id="log" rows="50" cols="100">
