--- a/app/views/ApplicationController/show.html
+++ b/app/views/ApplicationController/show.html
@@ -1,6 +1,12 @@
 #{extends 'main.html' /}
 #{set title:'Application configuration' /}
 <h3>Application ${application.pid}</h3>
+<h5>Useful resources:</h5>
+<ul>
+#{if application.isRunning()}
+	<li><a href="@{ApplicationController.status(application.id)}">Server status</a></li>
+#{/if}
+</ul>
 
 <h5>Application log (You'll need to have a WebSockets enabled browser):</h5>
 <div id="log" rows="50" cols="100">
