--- a/app/views/main.html
+++ b/app/views/main.html
@@ -12,9 +12,15 @@
         #{get 'moreScripts' /}
     </head>
     <body>
-    	<a href="/">
-    		<img src="@{'/public/images/logo.png'}"/>
-    	</a>
-        #{doLayout /}
+    	<div id="header">
+    		<h1 id="logo">
+		    	<a href="/">
+		    		<img src="@{'/public/images/logo.png'}" alt="Play! Application Server"/>
+		    	</a>
+	    	</h1>
+    	</div>
+    	<div id="page">
+        	#{doLayout /}
+        </div>
     </body>
 </html>
