--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -2,10 +2,11 @@ body {
 	margin: 0px;
 	padding: 0px;
 	color: #000;
+    background: -moz-linear-gradient(center top , #fff, #ccc) repeat scroll 0 0 transparent;
 }
 
 h1, h2, h3, h4, h5 {
-    color: #333333;
+    color: #333;
 }
 
 table {
@@ -15,7 +16,7 @@ table {
 th {
 	text-align: left;
 	padding-right: 20px;
-	border-bottom: 1px solid #000000;
+	border-bottom: 1px solid #000;
 	color: #02246b;
 }
 
@@ -45,7 +46,7 @@ a:hover {
 }
 
 div#header {
-    background: -moz-linear-gradient(center top , #555555, #333333) repeat scroll 0 0 transparent;
+    background: -moz-linear-gradient(center top , #555, #333) repeat scroll 0 0 transparent;
     height: 70px;
 }
 
@@ -57,13 +58,18 @@ div#header h1#logo {
 div#header h1#logo a {
 	background: url("@{'/public/images/logo.png'}") no-repeat scroll 50% 50% transparent;
     display: block;
-    height: 50px;
-    top: 10px;
+    height: 70px;
     position: absolute;
     width: 550px;
     padding-left: 20px;
 }
 
+div#header h1#logo a img {
+	padding: 10px 0px;
+    height: 50px;
+    width: 550px;
+}
+
 div#page {
-	padding: 10px 20px 10px 20px;
+	padding: 10px 20px;
 }
