--- a/app/views/main.html
+++ b/app/views/main.html
@@ -22,5 +22,8 @@
     	<div id="page">
         	#{doLayout /}
         </div>
+        <div id="footer">
+        	&copy; 2011-${ new Date().getYear()+1900 } <a href="https://github.com/killdashnine">Matthias van der Vlies</a> and <a href="https://github.com/martenz">Marten Zijlstra</a>
+        </div>
     </body>
 </html>
