--- a/app/views/main.html
+++ b/app/views/main.html
@@ -24,7 +24,7 @@
         </div>
         <div id="footer">
         	<p>
-        		&copy; 2011-${ new Date().getYear()+1900 } <a href="https://github.com/killdashnine">Matthias van der Vlies</a> and <a href="https://github.com/martenz">Marten Zijlstra</a>
+        		Revision: ${play.configuration.getProperty("git.revision")} &copy; 2011-${ new Date().getYear()+1900 } <a href="https://github.com/killdashnine">Matthias van der Vlies</a> and <a href="https://github.com/martenz">Marten Zijlstra</a>
         	</p>
         </div>
     </body>
